# datahack-test-data-generating

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
no_spark_in_my_home/demo/: book.py  config.json  user.py
no_spark_in_my_home/src/: config.json  example.py  generator.py  handlers.py
src/: data.json  example.py  expression.py  generator.py  handlers.py
tests/: config.json  test_basic_cases.py  test_foreign_key.py  test_frequency_distribution.py  testconf.py
