# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no_spark_in_my_home"
version = "1.0.1"
description = "Yet another Python package for data generation"
readme = "README.md"
authors = [
    { name = "scripthound", email = "grinkiko@gmail.com" },
    { name = "nomilkinmyhome"}]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["fake", "data", "generator"]
dependencies = [
    "pyspark",
    "pandas",
    "mimesis",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/NorthShine/datahack-test-data-generating"
